<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitXY"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            android:background="#0000"
            android:id="@+id/batu"
            android:src="@drawable/batu"
            android:contentDescription="@string/rock_button_desc"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/kertas"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_margin="5dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:background="#0000"
            android:scaleType="fitXY"
            android:src="@drawable/kertas"
            android:contentDescription="@string/paper_button_desc"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/gunting"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_margin="10dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:background="#0000"
            android:scaleType="fitXY"
            android:src="@drawable/gunting"
            android:contentDescription="@string/scissors_button_desc"/>
    </LinearLayout>
</FrameLayout>