<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="22dp"
    android:paddingVertical="32dp"
    android:gravity="center">
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/outfit_semibold"
        android:gravity="center"
        android:padding="8dp"
        android:rotationY="0"
        tools:text="Hasil Permainan"
        android:text="@string/dialog_result_text"
        android:textColor="#000000"
        android:textSize="28sp" />
    <TextView
        android:id="@+id/tv_result_big_text"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:fontFamily="@font/outfit_semibold"
        android:gravity="center"
        android:padding="8dp"
        android:rotationY="0"
        tools:text="CPU \n MENANG!"
        android:textColor="#000000"
        android:textSize="38sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play_again"
        android:layout_marginVertical="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        tools:text="Main Lagi"
        android:text="@string/dialog_play_again"
        android:fontFamily="@font/outfit_semibold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="#9A6DBA"
        android:paddingHorizontal="28dp"
        android:paddingVertical="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back_main_menu"
        android:layout_marginVertical="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        tools:text="Kembali Ke Menu"
        android:text="@string/dialog_back_menu"
        android:fontFamily="@font/outfit_semibold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="#FE9800"
        android:paddingHorizontal="28dp"
        android:paddingVertical="10dp"
        />
</LinearLayout>