<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/ll_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="56dp"
        layout="@layout/title_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_refresh"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#00000000"
        android:contentDescription="@string/refresh_description"
        android:scaleType="fitXY"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_player_chosen"
        app:layout_constraintTop_toBottomOf="@+id/ll_container" />

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_title_text">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_p1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/player_1"
                android:textColor="#03A9F4"
                android:textSize="24sp" />

            <include
                android:id="@+id/player_option"
                layout="@layout/option_list" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/outfit_semibold"
            android:gravity="center"
            android:padding="8dp"
            android:rotation="-20"
            android:rotationY="0"
            android:text="@string/initial_text_result"
            android:textColor="#FF0101"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_p2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/computer"
                android:textColor="#03A9F4"
                android:textSize="24sp" />

            <include
                android:id="@+id/computer_option"
                layout="@layout/option_list" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_player_chosen"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="#A6959595"
        android:fontFamily="@font/outfit_semibold"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:textColor="#3D3D3D"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_container"
        android:ellipsize="end"
        android:maxLines="2"
        android:gravity="center"
        tools:text="CPU Memilih Kertas" />


</androidx.constraintlayout.widget.ConstraintLayout>